--- a/header_18/style.css
+++ b/header_18/style.css
@@ -42,13 +42,15 @@ nav .btn {
 nav .btn:hover {
     background: #482BE7;
     color: #FFFFFF;
+    border: 1px solid #FFFFFF;
 }
 .header {
     background: url(images/header_bg.png);
     background-color: #482BE7;
     background-size: cover;
     width: 100%;
-    height: 850px;
+    /* height: 100vh; */
+    padding-bottom: 100px;
 }
 .header-section {
     display: flex;
@@ -98,27 +100,32 @@ nav .btn:hover {
     background: #482BE7;
     color: #FFFFFF;
 }
+.header-cta-btn .get-started:hover {
+    background: #482BE7;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+}
 
 @media screen and (max-width:768px) {
     nav .btn {
-        margin-left: 0;
+        margin-left: -8px;
         text-align: start;
     }
     .header {
         background: #482BE7 !important;
-        height: 1200px;
+        /* height: 100vh; */
     }
     .hero-text br {
         display: none !important;
     }
     .hero-text h1 {
-        font-size: 52px;
-        line-height: 56px;
+        font-size: 32px;
+        line-height: 36px;
         letter-spacing: -1px;
     }
     .hero-text p{
-        font-size: 18px;
-        line-height: 30px;
+        font-size: 16px;
+        line-height: 22px;
     }
     .header-cta-btn button{
         padding: 7px 22px;
@@ -128,6 +135,7 @@ nav .btn:hover {
         background: #ffffff;
         color: #482BE7;
         font-size: 19px;
+        border: 1px solid #482BE7;
     }
 }
 
