--- a/header_18/style.css
+++ b/header_18/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     font-family: 'DM Sans', sans-serif;
 }
+body {
+    background-color: #482BE7;
+}
 
 .navbar .navbar-brand {
     font-family: 'DM Sans';
@@ -46,10 +49,11 @@ nav .btn:hover {
 }
 .header {
     background: url(images/header_bg.png);
+    background-repeat:  no-repeat;
     background-color: #482BE7;
     background-size: cover;
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     padding-bottom: 100px;
 }
 .header-section {
@@ -130,6 +134,7 @@ nav .btn:hover {
     .header-cta-btn button{
         padding: 7px 22px;
         /* display: block; */
+        margin-bottom: 200px;
     }
     .header-cta-btn button:hover {
         background: #ffffff;
@@ -142,9 +147,9 @@ nav .btn:hover {
 @media screen and (max-width:375px) {
     .header-cta-btn {
         display: block;
+        padding-bottom: 100px;
     }
     .header-cta-btn button {
         margin: 12px 0;
-
     }
 }
